# awascript

./: CMakeLists.txt  README.md
example/: hello.awa
src/: awascript.c
